# simd_feature_check

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  test_consistency.cpp
bench/: CMakeLists.txt  CalculatorBench.cpp  StringProcessorBench.cpp  simd_benchmark.cpp
cmake/: CompilerWarnings.cmake  FindGBenchmark.cmake  FindGTest.cmake  LTO.cmake  Packaging.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cmake/configs/: Config.h.in
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example_01_basic_feature_detection.cpp  example_02_compile_time_detection.cpp  example_03_runtime_detection.cpp  example_04_list_all_supported_features.cpp  example_05_function_dispatch.cpp  example_06_feature_detector.cpp  example_07_sfinae.cpp
include/myproject/: ModuleA.h  ModuleB.h
include/simd/: common.hpp  feature_check.hpp  simd.hpp
include/simd/arch/: detection.hpp  tags.hpp
include/simd/core/: concepts.hpp  types.hpp
include/simd/impl/avx/: mask_ops.hpp  vector_ops.hpp
include/simd/impl/sse2/: mask_ops.hpp  math_ops.hpp  memory_ops.hpp  vector_ops.hpp
include/simd/mask/: mask.hpp
include/simd/operations/: forward_decl.hpp
include/simd/registers/: types.hpp
include/simd/vector/: base.hpp  vector.hpp
src/: CMakeLists.txt  ModuleA.cpp  ModuleB.cpp  main.cpp  simd_feature_check.cpp
test/: CMakeLists.txt  ModuleATest.cpp  ModuleBTest.cpp  simd_features_test.cpp
